Closed Bug 629884 Opened 15 years ago Closed 15 years ago

[clang]: Can't build nsMsgAppleCodes.h with Clang because of pragma error

Categories

(MailNews Core :: Build Config, defect)

x86_64
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.3a3

People

(Reporter: Nomis101, Assigned: Nomis101)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch patch (obsolete) — Splinter Review
If you build Thunderbird with Clang you get the following error (luckily its the onlies error): In file included from /Developer/temp/src/mailnews/compose/src/nsMsgAppleDoubleEncode.cpp:53: /Developer/temp/src/mailnews/compose/src/nsMsgAppleCodes.h:56:9: error: mac68k alignment pragma is not supported on this target #pragma options align=mac68k ^ With the attached patch you doesn't get this error anymore and it is possible to build TB with Clang. The solution is adopted from: http://mxr.mozilla.org/mozilla-central/source/netwerk/streamconv/src/nsAppleFileDecoder.h#49 and http://mxr.mozilla.org/mozilla-central/source/uriloader/exthandler/mac/nsDecodeAppleFile.h#51
Attachment #508106 - Attachment is patch: true
Attached patch patch v.1.1Splinter Review
Sorry, the above patch failed with GCC because I've missed something. This patch also builds with GCC.
Attachment #508106 - Attachment is obsolete: true
I think the patch is correct.
Attachment #508157 - Flags: review?(bugzilla)
Attachment #508157 - Flags: review?(bugzilla) → review+
Keywords: checkin-needed
Assignee: nobody → Nomis101
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: