Bug 629884 - [clang]: Can't build nsMsgAppleCodes.h with Clang because of pragma error; r=Standard8